<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/frame2">

    <ImageView
        android:id="@+id/rocketImg"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/playBtn"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/back"
        android:text="@string/play"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/settingsBtn"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/back"
        android:text="@string/settings"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playBtn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/infoBtn"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/back"
        android:text="@string/info"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingsBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>