<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/frame2">

    <ImageView
        android:id="@+id/rocket"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="104dp"
        android:src="@drawable/rocket1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/balanceTv"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_margin="8dp"
        android:background="@drawable/back"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="50000" />

    <TextView
        android:id="@+id/rateTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.277"
        tools:text="2X" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startBtn"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:background="@drawable/back"
        android:text="@string/startBtn"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/controlPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <include
            android:id="@+id/betControl"
            layout="@layout/control"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/claimBtn"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/back"
        android:text="@string/claim"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/resultTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="You lost" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/tryAgainBtn"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/back"
        android:text="@string/tryAgainBtn"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resultTv" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/backToMenuBtn"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/back"
        android:text="@string/backToMenu"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tryAgainBtn" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:constraint_referenced_ids="backToMenuBtn,tryAgainBtn,resultTv" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/controlPanelGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="startBtn, controlPanel" />


</androidx.constraintlayout.widget.ConstraintLayout>